# circuit-breaker-box

./: Justfile  README.md  pyproject.toml
circuit_breaker/: circuit_breaker.py
circuit_breaker_box/: __init__.py  circuit_breaker.py  circuit_breaker_base.py  circuit_breaker_in_memory.py  circuit_breaker_redis.py  errors.py  retryer_base.py  retryers.py
examples/: example_circuit_breaker.py  example_retry.py  example_retry_circuit_breaker.py
tests/: conftest.py  test_circuit_breaker.py  test_retriers.py
